--- a/conf/pekko.conf
+++ b/conf/pekko.conf
@@ -1,9 +1,12 @@
 play {
-  akka {
-    akka.loggers = ["akka.event.Logging$DefaultLogger", "akka.event.slf4j.Slf4jLogger"]
+  pekko {
+    loggers = [
+      "org.apache.pekko.event.Logging$DefaultLogger",
+      "org.apache.pekko.event.slf4j.Slf4jLogger"
+    ]
     loglevel = WARNING
     actor {
-      default-dispatcher = {
+      default-dispatcher {
         type = "Dispatcher"
         executor = "fork-join-executor"
         default-executor {
